// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate input type class for prisma model without the omitted field: UserCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"UserCreateInput\\", {})
export class UserCreateInput {
  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  @Field(() => Float, {
    nullable: true
  })
  balance?: number | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate input type class for prisma model without the omitted field: UserCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"UserCreateManyInput\\", {})
export class UserCreateManyInput {
  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  @Field(() => Float, {
    nullable: true
  })
  balance?: number | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate input type class for prisma model without the omitted field: UserOrderByWithRelationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SortOrderInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"UserOrderByWithRelationInput\\", {})
export class UserOrderByWithRelationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  dateOfBirth?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  name?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrderInput, {
    nullable: true
  })
  balance?: SortOrderInput | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate input type class for prisma model without the omitted field: UserScalarWhereWithAggregatesInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeWithAggregatesFilter, FloatNullableWithAggregatesFilter, IntWithAggregatesFilter, StringWithAggregatesFilter } from \\"../inputs\\";

@InputType(\\"UserScalarWhereWithAggregatesInput\\", {})
export class UserScalarWhereWithAggregatesInput {
  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  AND?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  OR?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  NOT?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => DateTimeWithAggregatesFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeWithAggregatesFilter | undefined;

  @Field(() => StringWithAggregatesFilter, {
    nullable: true
  })
  name?: StringWithAggregatesFilter | undefined;

  @Field(() => FloatNullableWithAggregatesFilter, {
    nullable: true
  })
  balance?: FloatNullableWithAggregatesFilter | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate input type class for prisma model without the omitted field: UserUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFieldUpdateOperationsInput, NullableFloatFieldUpdateOperationsInput, StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"UserUpdateInput\\", {})
export class UserUpdateInput {
  @Field(() => DateTimeFieldUpdateOperationsInput, {
    nullable: true
  })
  dateOfBirth?: DateTimeFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  name?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => NullableFloatFieldUpdateOperationsInput, {
    nullable: true
  })
  balance?: NullableFloatFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate input type class for prisma model without the omitted field: UserUpdateManyMutationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFieldUpdateOperationsInput, NullableFloatFieldUpdateOperationsInput, StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"UserUpdateManyMutationInput\\", {})
export class UserUpdateManyMutationInput {
  @Field(() => DateTimeFieldUpdateOperationsInput, {
    nullable: true
  })
  dateOfBirth?: DateTimeFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  name?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => NullableFloatFieldUpdateOperationsInput, {
    nullable: true
  })
  balance?: NullableFloatFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate input type class for prisma model without the omitted field: UserWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFilter, FloatNullableFilter, IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"UserWhereInput\\", {})
export class UserWhereInput {
  @Field(() => [UserWhereInput], {
    nullable: true
  })
  AND?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  OR?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  NOT?: UserWhereInput[] | undefined;

  @Field(() => DateTimeFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  name?: StringFilter | undefined;

  @Field(() => FloatNullableFilter, {
    nullable: true
  })
  balance?: FloatNullableFilter | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate input type class for prisma model without the omitted field: UserWhereUniqueInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFilter, FloatNullableFilter, StringFilter, UserWhereInput } from \\"../inputs\\";

@InputType(\\"UserWhereUniqueInput\\", {})
export class UserWhereUniqueInput {
  @Field(() => [UserWhereInput], {
    nullable: true
  })
  AND?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  OR?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  NOT?: UserWhereInput[] | undefined;

  @Field(() => DateTimeFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  name?: StringFilter | undefined;

  @Field(() => FloatNullableFilter, {
    nullable: true
  })
  balance?: FloatNullableFilter | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided should properly generate model type class for prisma model without the omitted field: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"User\\", {})
export class User {
  id?: number;

  @Field((_type: any) => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field((_type: any) => String, {
    nullable: false
  })
  name!: string;

  @Field((_type: any) => Float, {
    nullable: true
  })
  balance?: number | null;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(input: false)\` set should properly generate input type class for prisma model with the field defined: UserCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"UserCreateInput\\", {})
export class UserCreateInput {
  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  @Field(() => Float, {
    nullable: true
  })
  balance?: number | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(input: false)\` set should properly generate input type class for prisma model with the field defined: UserCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"UserCreateManyInput\\", {})
export class UserCreateManyInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  @Field(() => Float, {
    nullable: true
  })
  balance?: number | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(input: false)\` set should properly generate input type class for prisma model with the field defined: UserOrderByWithRelationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SortOrderInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"UserOrderByWithRelationInput\\", {})
export class UserOrderByWithRelationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  id?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  dateOfBirth?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  name?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrderInput, {
    nullable: true
  })
  balance?: SortOrderInput | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(input: false)\` set should properly generate input type class for prisma model with the field defined: UserScalarWhereWithAggregatesInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeWithAggregatesFilter, FloatNullableWithAggregatesFilter, IntWithAggregatesFilter, StringWithAggregatesFilter } from \\"../inputs\\";

@InputType(\\"UserScalarWhereWithAggregatesInput\\", {})
export class UserScalarWhereWithAggregatesInput {
  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  AND?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  OR?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  NOT?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => IntWithAggregatesFilter, {
    nullable: true
  })
  id?: IntWithAggregatesFilter | undefined;

  @Field(() => DateTimeWithAggregatesFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeWithAggregatesFilter | undefined;

  @Field(() => StringWithAggregatesFilter, {
    nullable: true
  })
  name?: StringWithAggregatesFilter | undefined;

  @Field(() => FloatNullableWithAggregatesFilter, {
    nullable: true
  })
  balance?: FloatNullableWithAggregatesFilter | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(input: false)\` set should properly generate input type class for prisma model with the field defined: UserUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFieldUpdateOperationsInput, NullableFloatFieldUpdateOperationsInput, StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"UserUpdateInput\\", {})
export class UserUpdateInput {
  @Field(() => DateTimeFieldUpdateOperationsInput, {
    nullable: true
  })
  dateOfBirth?: DateTimeFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  name?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => NullableFloatFieldUpdateOperationsInput, {
    nullable: true
  })
  balance?: NullableFloatFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(input: false)\` set should properly generate input type class for prisma model with the field defined: UserUpdateManyMutationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFieldUpdateOperationsInput, NullableFloatFieldUpdateOperationsInput, StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"UserUpdateManyMutationInput\\", {})
export class UserUpdateManyMutationInput {
  @Field(() => DateTimeFieldUpdateOperationsInput, {
    nullable: true
  })
  dateOfBirth?: DateTimeFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  name?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => NullableFloatFieldUpdateOperationsInput, {
    nullable: true
  })
  balance?: NullableFloatFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(input: false)\` set should properly generate input type class for prisma model with the field defined: UserWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFilter, FloatNullableFilter, IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"UserWhereInput\\", {})
export class UserWhereInput {
  @Field(() => [UserWhereInput], {
    nullable: true
  })
  AND?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  OR?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  NOT?: UserWhereInput[] | undefined;

  @Field(() => IntFilter, {
    nullable: true
  })
  id?: IntFilter | undefined;

  @Field(() => DateTimeFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  name?: StringFilter | undefined;

  @Field(() => FloatNullableFilter, {
    nullable: true
  })
  balance?: FloatNullableFilter | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(input: false)\` set should properly generate input type class for prisma model with the field defined: UserWhereUniqueInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFilter, FloatNullableFilter, StringFilter, UserWhereInput } from \\"../inputs\\";

@InputType(\\"UserWhereUniqueInput\\", {})
export class UserWhereUniqueInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  AND?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  OR?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  NOT?: UserWhereInput[] | undefined;

  @Field(() => DateTimeFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  name?: StringFilter | undefined;

  @Field(() => FloatNullableFilter, {
    nullable: true
  })
  balance?: FloatNullableFilter | undefined;
}
"
`;

exports[`omit-fields when \`omitInputFieldsByDefault\` generator option is provided when model field has \`omit(output: false)\` set should properly generate model type class for prisma model with the field defined: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../scalars\\";

@ObjectType(\\"User\\", {})
export class User {
  @Field((_type: any) => Int, {
    nullable: false
  })
  id!: number;

  @Field((_type: any) => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field((_type: any) => String, {
    nullable: false
  })
  name!: string;

  @Field((_type: any) => Float, {
    nullable: true
  })
  balance?: number | null;
}
"
`;

exports[`omit-fields when model field has \`omit(input: true)\` set should properly generate input type class for prisma model without the omitted field: UserCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"UserCreateInput\\", {})
export class UserCreateInput {
  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;
}
"
`;

exports[`omit-fields when model field has \`omit(input: true)\` set should properly generate input type class for prisma model without the omitted field: UserCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"UserCreateManyInput\\", {})
export class UserCreateManyInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;
}
"
`;

exports[`omit-fields when model field has \`omit(input: true)\` set should properly generate input type class for prisma model without the omitted field: UserOrderByWithRelationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SortOrderInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"UserOrderByWithRelationInput\\", {})
export class UserOrderByWithRelationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  id?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  dateOfBirth?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  name?: \\"asc\\" | \\"desc\\" | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(input: true)\` set should properly generate input type class for prisma model without the omitted field: UserScalarWhereWithAggregatesInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeWithAggregatesFilter, FloatNullableWithAggregatesFilter, IntWithAggregatesFilter, StringWithAggregatesFilter } from \\"../inputs\\";

@InputType(\\"UserScalarWhereWithAggregatesInput\\", {})
export class UserScalarWhereWithAggregatesInput {
  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  AND?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  OR?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  NOT?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => IntWithAggregatesFilter, {
    nullable: true
  })
  id?: IntWithAggregatesFilter | undefined;

  @Field(() => DateTimeWithAggregatesFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeWithAggregatesFilter | undefined;

  @Field(() => StringWithAggregatesFilter, {
    nullable: true
  })
  name?: StringWithAggregatesFilter | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(input: true)\` set should properly generate input type class for prisma model without the omitted field: UserUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFieldUpdateOperationsInput, NullableFloatFieldUpdateOperationsInput, StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"UserUpdateInput\\", {})
export class UserUpdateInput {
  @Field(() => DateTimeFieldUpdateOperationsInput, {
    nullable: true
  })
  dateOfBirth?: DateTimeFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  name?: StringFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(input: true)\` set should properly generate input type class for prisma model without the omitted field: UserUpdateManyMutationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFieldUpdateOperationsInput, NullableFloatFieldUpdateOperationsInput, StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"UserUpdateManyMutationInput\\", {})
export class UserUpdateManyMutationInput {
  @Field(() => DateTimeFieldUpdateOperationsInput, {
    nullable: true
  })
  dateOfBirth?: DateTimeFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  name?: StringFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(input: true)\` set should properly generate input type class for prisma model without the omitted field: UserWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFilter, FloatNullableFilter, IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"UserWhereInput\\", {})
export class UserWhereInput {
  @Field(() => [UserWhereInput], {
    nullable: true
  })
  AND?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  OR?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  NOT?: UserWhereInput[] | undefined;

  @Field(() => IntFilter, {
    nullable: true
  })
  id?: IntFilter | undefined;

  @Field(() => DateTimeFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  name?: StringFilter | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(input: true)\` set should properly generate input type class for prisma model without the omitted field: UserWhereUniqueInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFilter, FloatNullableFilter, StringFilter, UserWhereInput } from \\"../inputs\\";

@InputType(\\"UserWhereUniqueInput\\", {})
export class UserWhereUniqueInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  AND?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  OR?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  NOT?: UserWhereInput[] | undefined;

  @Field(() => DateTimeFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  name?: StringFilter | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(output: true)\` set should properly generate input type class for prisma model with the omitted field: UserCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"UserCreateInput\\", {})
export class UserCreateInput {
  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  @Field(() => Float, {
    nullable: true
  })
  balance?: number | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(output: true)\` set should properly generate input type class for prisma model with the omitted field: UserCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"UserCreateManyInput\\", {})
export class UserCreateManyInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => Date, {
    nullable: false
  })
  dateOfBirth!: Date;

  @Field(() => String, {
    nullable: false
  })
  name!: string;

  @Field(() => Float, {
    nullable: true
  })
  balance?: number | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(output: true)\` set should properly generate input type class for prisma model with the omitted field: UserOrderByWithRelationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SortOrderInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"UserOrderByWithRelationInput\\", {})
export class UserOrderByWithRelationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  id?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  dateOfBirth?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  name?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrderInput, {
    nullable: true
  })
  balance?: SortOrderInput | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(output: true)\` set should properly generate input type class for prisma model with the omitted field: UserScalarWhereWithAggregatesInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeWithAggregatesFilter, FloatNullableWithAggregatesFilter, IntWithAggregatesFilter, StringWithAggregatesFilter } from \\"../inputs\\";

@InputType(\\"UserScalarWhereWithAggregatesInput\\", {})
export class UserScalarWhereWithAggregatesInput {
  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  AND?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  OR?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => [UserScalarWhereWithAggregatesInput], {
    nullable: true
  })
  NOT?: UserScalarWhereWithAggregatesInput[] | undefined;

  @Field(() => IntWithAggregatesFilter, {
    nullable: true
  })
  id?: IntWithAggregatesFilter | undefined;

  @Field(() => DateTimeWithAggregatesFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeWithAggregatesFilter | undefined;

  @Field(() => StringWithAggregatesFilter, {
    nullable: true
  })
  name?: StringWithAggregatesFilter | undefined;

  @Field(() => FloatNullableWithAggregatesFilter, {
    nullable: true
  })
  balance?: FloatNullableWithAggregatesFilter | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(output: true)\` set should properly generate input type class for prisma model with the omitted field: UserUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFieldUpdateOperationsInput, NullableFloatFieldUpdateOperationsInput, StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"UserUpdateInput\\", {})
export class UserUpdateInput {
  @Field(() => DateTimeFieldUpdateOperationsInput, {
    nullable: true
  })
  dateOfBirth?: DateTimeFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  name?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => NullableFloatFieldUpdateOperationsInput, {
    nullable: true
  })
  balance?: NullableFloatFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(output: true)\` set should properly generate input type class for prisma model with the omitted field: UserUpdateManyMutationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFieldUpdateOperationsInput, NullableFloatFieldUpdateOperationsInput, StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"UserUpdateManyMutationInput\\", {})
export class UserUpdateManyMutationInput {
  @Field(() => DateTimeFieldUpdateOperationsInput, {
    nullable: true
  })
  dateOfBirth?: DateTimeFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  name?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => NullableFloatFieldUpdateOperationsInput, {
    nullable: true
  })
  balance?: NullableFloatFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(output: true)\` set should properly generate input type class for prisma model with the omitted field: UserWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFilter, FloatNullableFilter, IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"UserWhereInput\\", {})
export class UserWhereInput {
  @Field(() => [UserWhereInput], {
    nullable: true
  })
  AND?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  OR?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  NOT?: UserWhereInput[] | undefined;

  @Field(() => IntFilter, {
    nullable: true
  })
  id?: IntFilter | undefined;

  @Field(() => DateTimeFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  name?: StringFilter | undefined;

  @Field(() => FloatNullableFilter, {
    nullable: true
  })
  balance?: FloatNullableFilter | undefined;
}
"
`;

exports[`omit-fields when model field has \`omit(output: true)\` set should properly generate input type class for prisma model with the omitted field: UserWhereUniqueInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { DateTimeFilter, FloatNullableFilter, StringFilter, UserWhereInput } from \\"../inputs\\";

@InputType(\\"UserWhereUniqueInput\\", {})
export class UserWhereUniqueInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  AND?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  OR?: UserWhereInput[] | undefined;

  @Field(() => [UserWhereInput], {
    nullable: true
  })
  NOT?: UserWhereInput[] | undefined;

  @Field(() => DateTimeFilter, {
    nullable: true
  })
  dateOfBirth?: DateTimeFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  name?: StringFilter | undefined;

  @Field(() => FloatNullableFilter, {
    nullable: true
  })
  balance?: FloatNullableFilter | undefined;
}
"
`;

exports[`omit-fields when model field has both create and update omit input set should properly generate create and update input type classes without that field: SampleModelCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateInput\\", {})
export class SampleModelCreateInput {
  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has both create and update omit input set should properly generate create and update input type classes without that field: SampleModelCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateManyInput\\", {})
export class SampleModelCreateManyInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has both create and update omit input set should properly generate create and update input type classes without that field: SampleModelUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"SampleModelUpdateInput\\", {})
export class SampleModelUpdateInput {
  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  normalField?: StringFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has both create and update omit input set should properly generate other input type classes with that field: SampleModelOrderByWithAggregationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleModelAvgOrderByAggregateInput, SampleModelCountOrderByAggregateInput, SampleModelMaxOrderByAggregateInput, SampleModelMinOrderByAggregateInput, SampleModelSumOrderByAggregateInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"SampleModelOrderByWithAggregationInput\\", {})
export class SampleModelOrderByWithAggregationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  id?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  omittedField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  normalField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SampleModelCountOrderByAggregateInput, {
    nullable: true
  })
  _count?: SampleModelCountOrderByAggregateInput | undefined;

  @Field(() => SampleModelAvgOrderByAggregateInput, {
    nullable: true
  })
  _avg?: SampleModelAvgOrderByAggregateInput | undefined;

  @Field(() => SampleModelMaxOrderByAggregateInput, {
    nullable: true
  })
  _max?: SampleModelMaxOrderByAggregateInput | undefined;

  @Field(() => SampleModelMinOrderByAggregateInput, {
    nullable: true
  })
  _min?: SampleModelMinOrderByAggregateInput | undefined;

  @Field(() => SampleModelSumOrderByAggregateInput, {
    nullable: true
  })
  _sum?: SampleModelSumOrderByAggregateInput | undefined;
}
"
`;

exports[`omit-fields when model field has both create and update omit input set should properly generate other input type classes with that field: SampleModelWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"SampleModelWhereInput\\", {})
export class SampleModelWhereInput {
  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  AND?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  OR?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  NOT?: SampleModelWhereInput[] | undefined;

  @Field(() => IntFilter, {
    nullable: true
  })
  id?: IntFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  omittedField?: StringFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  normalField?: StringFilter | undefined;
}
"
`;

exports[`omit-fields when model field has omit input create set should properly generate create input type classes without that field: SampleModelCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateInput\\", {})
export class SampleModelCreateInput {
  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has omit input create set should properly generate create input type classes without that field: SampleModelCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateManyInput\\", {})
export class SampleModelCreateManyInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has omit input create set should properly generate other input type classes with that field: SampleModelOrderByWithAggregationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleModelAvgOrderByAggregateInput, SampleModelCountOrderByAggregateInput, SampleModelMaxOrderByAggregateInput, SampleModelMinOrderByAggregateInput, SampleModelSumOrderByAggregateInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"SampleModelOrderByWithAggregationInput\\", {})
export class SampleModelOrderByWithAggregationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  id?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  omittedField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  normalField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SampleModelCountOrderByAggregateInput, {
    nullable: true
  })
  _count?: SampleModelCountOrderByAggregateInput | undefined;

  @Field(() => SampleModelAvgOrderByAggregateInput, {
    nullable: true
  })
  _avg?: SampleModelAvgOrderByAggregateInput | undefined;

  @Field(() => SampleModelMaxOrderByAggregateInput, {
    nullable: true
  })
  _max?: SampleModelMaxOrderByAggregateInput | undefined;

  @Field(() => SampleModelMinOrderByAggregateInput, {
    nullable: true
  })
  _min?: SampleModelMinOrderByAggregateInput | undefined;

  @Field(() => SampleModelSumOrderByAggregateInput, {
    nullable: true
  })
  _sum?: SampleModelSumOrderByAggregateInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input create set should properly generate other input type classes with that field: SampleModelUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"SampleModelUpdateInput\\", {})
export class SampleModelUpdateInput {
  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  omittedField?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  normalField?: StringFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input create set should properly generate other input type classes with that field: SampleModelWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"SampleModelWhereInput\\", {})
export class SampleModelWhereInput {
  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  AND?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  OR?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  NOT?: SampleModelWhereInput[] | undefined;

  @Field(() => IntFilter, {
    nullable: true
  })
  id?: IntFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  omittedField?: StringFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  normalField?: StringFilter | undefined;
}
"
`;

exports[`omit-fields when model field has omit input orderBy set should properly generate orderBy input type classes without that field: SampleModelOrderByWithAggregationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleModelAvgOrderByAggregateInput, SampleModelCountOrderByAggregateInput, SampleModelMaxOrderByAggregateInput, SampleModelMinOrderByAggregateInput, SampleModelSumOrderByAggregateInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"SampleModelOrderByWithAggregationInput\\", {})
export class SampleModelOrderByWithAggregationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  id?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  normalField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SampleModelCountOrderByAggregateInput, {
    nullable: true
  })
  _count?: SampleModelCountOrderByAggregateInput | undefined;

  @Field(() => SampleModelAvgOrderByAggregateInput, {
    nullable: true
  })
  _avg?: SampleModelAvgOrderByAggregateInput | undefined;

  @Field(() => SampleModelMaxOrderByAggregateInput, {
    nullable: true
  })
  _max?: SampleModelMaxOrderByAggregateInput | undefined;

  @Field(() => SampleModelMinOrderByAggregateInput, {
    nullable: true
  })
  _min?: SampleModelMinOrderByAggregateInput | undefined;

  @Field(() => SampleModelSumOrderByAggregateInput, {
    nullable: true
  })
  _sum?: SampleModelSumOrderByAggregateInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input orderBy set should properly generate other input type classes with that field: SampleModelCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateInput\\", {})
export class SampleModelCreateInput {
  @Field(() => String, {
    nullable: false
  })
  omittedField!: string;

  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has omit input orderBy set should properly generate other input type classes with that field: SampleModelCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateManyInput\\", {})
export class SampleModelCreateManyInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => String, {
    nullable: false
  })
  omittedField!: string;

  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has omit input orderBy set should properly generate other input type classes with that field: SampleModelUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"SampleModelUpdateInput\\", {})
export class SampleModelUpdateInput {
  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  omittedField?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  normalField?: StringFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input orderBy set should properly generate other input type classes with that field: SampleModelWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"SampleModelWhereInput\\", {})
export class SampleModelWhereInput {
  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  AND?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  OR?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  NOT?: SampleModelWhereInput[] | undefined;

  @Field(() => IntFilter, {
    nullable: true
  })
  id?: IntFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  omittedField?: StringFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  normalField?: StringFilter | undefined;
}
"
`;

exports[`omit-fields when model field has omit input update set should properly generate other input type classes with that field: SampleModelCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateInput\\", {})
export class SampleModelCreateInput {
  @Field(() => String, {
    nullable: false
  })
  omittedField!: string;

  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has omit input update set should properly generate other input type classes with that field: SampleModelCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateManyInput\\", {})
export class SampleModelCreateManyInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => String, {
    nullable: false
  })
  omittedField!: string;

  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has omit input update set should properly generate other input type classes with that field: SampleModelOrderByWithAggregationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleModelAvgOrderByAggregateInput, SampleModelCountOrderByAggregateInput, SampleModelMaxOrderByAggregateInput, SampleModelMinOrderByAggregateInput, SampleModelSumOrderByAggregateInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"SampleModelOrderByWithAggregationInput\\", {})
export class SampleModelOrderByWithAggregationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  id?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  omittedField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  normalField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SampleModelCountOrderByAggregateInput, {
    nullable: true
  })
  _count?: SampleModelCountOrderByAggregateInput | undefined;

  @Field(() => SampleModelAvgOrderByAggregateInput, {
    nullable: true
  })
  _avg?: SampleModelAvgOrderByAggregateInput | undefined;

  @Field(() => SampleModelMaxOrderByAggregateInput, {
    nullable: true
  })
  _max?: SampleModelMaxOrderByAggregateInput | undefined;

  @Field(() => SampleModelMinOrderByAggregateInput, {
    nullable: true
  })
  _min?: SampleModelMinOrderByAggregateInput | undefined;

  @Field(() => SampleModelSumOrderByAggregateInput, {
    nullable: true
  })
  _sum?: SampleModelSumOrderByAggregateInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input update set should properly generate other input type classes with that field: SampleModelWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"SampleModelWhereInput\\", {})
export class SampleModelWhereInput {
  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  AND?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  OR?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  NOT?: SampleModelWhereInput[] | undefined;

  @Field(() => IntFilter, {
    nullable: true
  })
  id?: IntFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  omittedField?: StringFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  normalField?: StringFilter | undefined;
}
"
`;

exports[`omit-fields when model field has omit input update set should properly generate update input type classes without that field: SampleModelUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"SampleModelUpdateInput\\", {})
export class SampleModelUpdateInput {
  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  normalField?: StringFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input update set should properly generate update input type classes without that field: SampleModelUpdateManyMutationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"SampleModelUpdateManyMutationInput\\", {})
export class SampleModelUpdateManyMutationInput {
  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  normalField?: StringFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input where set should properly generate other input type classes with that field: SampleModelCreateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateInput\\", {})
export class SampleModelCreateInput {
  @Field(() => String, {
    nullable: false
  })
  omittedField!: string;

  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has omit input where set should properly generate other input type classes with that field: SampleModelCreateManyInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";

@InputType(\\"SampleModelCreateManyInput\\", {})
export class SampleModelCreateManyInput {
  @Field(() => Int, {
    nullable: true
  })
  id?: number | undefined;

  @Field(() => String, {
    nullable: false
  })
  omittedField!: string;

  @Field(() => String, {
    nullable: false
  })
  normalField!: string;
}
"
`;

exports[`omit-fields when model field has omit input where set should properly generate other input type classes with that field: SampleModelOrderByWithAggregationInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { SampleModelAvgOrderByAggregateInput, SampleModelCountOrderByAggregateInput, SampleModelMaxOrderByAggregateInput, SampleModelMinOrderByAggregateInput, SampleModelSumOrderByAggregateInput } from \\"../inputs\\";
import { SortOrder } from \\"../../enums/SortOrder\\";

@InputType(\\"SampleModelOrderByWithAggregationInput\\", {})
export class SampleModelOrderByWithAggregationInput {
  @Field(() => SortOrder, {
    nullable: true
  })
  id?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  omittedField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SortOrder, {
    nullable: true
  })
  normalField?: \\"asc\\" | \\"desc\\" | undefined;

  @Field(() => SampleModelCountOrderByAggregateInput, {
    nullable: true
  })
  _count?: SampleModelCountOrderByAggregateInput | undefined;

  @Field(() => SampleModelAvgOrderByAggregateInput, {
    nullable: true
  })
  _avg?: SampleModelAvgOrderByAggregateInput | undefined;

  @Field(() => SampleModelMaxOrderByAggregateInput, {
    nullable: true
  })
  _max?: SampleModelMaxOrderByAggregateInput | undefined;

  @Field(() => SampleModelMinOrderByAggregateInput, {
    nullable: true
  })
  _min?: SampleModelMinOrderByAggregateInput | undefined;

  @Field(() => SampleModelSumOrderByAggregateInput, {
    nullable: true
  })
  _sum?: SampleModelSumOrderByAggregateInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input where set should properly generate other input type classes with that field: SampleModelUpdateInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { StringFieldUpdateOperationsInput } from \\"../inputs\\";

@InputType(\\"SampleModelUpdateInput\\", {})
export class SampleModelUpdateInput {
  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  omittedField?: StringFieldUpdateOperationsInput | undefined;

  @Field(() => StringFieldUpdateOperationsInput, {
    nullable: true
  })
  normalField?: StringFieldUpdateOperationsInput | undefined;
}
"
`;

exports[`omit-fields when model field has omit input where set should properly generate where input type classes without that field: SampleModelWhereInput 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { Prisma } from \\"../../../../helpers/prisma-client-mock\\";
import { DecimalJSScalar } from \\"../../scalars\\";
import { IntFilter, StringFilter } from \\"../inputs\\";

@InputType(\\"SampleModelWhereInput\\", {})
export class SampleModelWhereInput {
  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  AND?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  OR?: SampleModelWhereInput[] | undefined;

  @Field(() => [SampleModelWhereInput], {
    nullable: true
  })
  NOT?: SampleModelWhereInput[] | undefined;

  @Field(() => IntFilter, {
    nullable: true
  })
  id?: IntFilter | undefined;

  @Field(() => StringFilter, {
    nullable: true
  })
  normalField?: StringFilter | undefined;
}
"
`;
